syntax = "proto3";

option java_package = "de.firehead.mapstruct.spi.protobuf.test.proto2proto";
option java_outer_classname = "Proto2ProtoTestProtos";

message OtherTestProtoMessage {
  string stringField = 1;
  int32 intField = 2;
  int64 longField = 3;
  float floatField = 4;
  double doubleField = 5;
  bool booleanField = 6;
  bytes bytesField = 7;
  OtherTestEnum enumField = 8;
  map<string, string> stringMapField = 9;
  map<string, int32> intMapField = 10;
  map<string, int64> longMapField = 11;
  map<string, float> floatMapField = 12;
  map<string, double> doubleMapField = 13;
  map<string, bool> boolMapField = 14;
  map<string, bytes> bytesMapField = 15;
  map<string, OtherTestEnum> enumMapField = 16;
}

message OtherDeepTestProtoMessage {
  OtherTestProtoMessage testProtoMessagePlain = 1;
  repeated OtherTestProtoMessage testProtoMessageList = 2;
  map<string, OtherTestProtoMessage> testProtoMessageMap = 3;
}

enum OtherTestEnum {
  OTHER_TEST_ENUM_UNSPECIFIED = 0;
  OTHER_TEST_ENUM_VALUE = 1;
}
